# classical-concerts-reviewer

./: LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Rocket.toml  diesel.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240302_153402_add_updated_at.rs  m20240302_171341_timestamps.rs  m20240302_175801_relations.rs  m20240303_190010_many_to_many.rs  m20240309_100749_associative_table.rs
backend/migrations/2024-02-05-184210_create_examples/: down.sql  up.sql
backend/src/: db.rs  dto.rs  main.rs  model.rs  repository.rs  routes.rs  schema.rs  service.rs  status.rs  transformer.rs
backend/src/dto/: example_dto.rs  example_many_to_many_dto.rs  example_with_relation_dto.rs  list_options_dto.rs
backend/src/model/: base_model.rs  example.rs  example_many_to_many.rs  example_sea_orm.rs  example_sea_orm_with_relation.rs  example_sea_orm_with_relation_example_many_to_many.rs  examples.rs  prelude.rs  sea_orm_search_params.rs
backend/src/repository/: base_repository.rs  base_seaorm_repository.rs  error.rs  example_pg_repository.rs  example_with_relation_repository.rs  in_memory_repository.rs  list_options.rs  repository_result.rs
backend/src/routes/: examples.rs  examples_with_relation.rs
backend/src/service/: base_service.rs  error.rs  example_service.rs  example_with_relation_service.rs  result.rs
backend/src/transformer/: example_many_to_many_transformer.rs  example_transformer.rs  example_with_relation_transformer.rs  helpers.rs  sea_orm_transformer.rs
documentation/: User-Flow-Reviewer.excalidraw
