[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid"] }
dotenvy = "0.15"
