[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" , "chrono"] }
dotenvy = "0.15"
chrono = "0.4.34"
